First page layout bug has been fixed.

--- a/src/main.css
+++ b/src/main.css
@@ -85,7 +85,7 @@ h1 { margin: 0px; height: 91px; }
     position: relative;
 }
 
-.firstHalfSingleSafety { width: 50%; padding: 10px 30px 10px 30px; }
+.firstHalfSingleSafety { width: 50%; padding: 10px 30px 10px 30px; min-height: 930px; }
 
  .secondHalfSingleSafety {
     position: absolute;
